--- a/splitter/index.html
+++ b/splitter/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <script src="index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
 </head>
 <body>
@@ -48,5 +49,7 @@
         </div>
 
     </div>
+
+    <h3 class="tag">By <a href="https://dorianrochette.fr/">Dorian Rochette</a></h3>
 </body>
 </html>
